# code

./: Cargo.toml
apps/app-tui/: Cargo.toml
apps/app-tui/src/: main.rs
apps/app-tui/src/data/: texts.rs
apps/app-tui/src/pages/: mod.rs  page.rs
apps/app-tui/src/pages/accounts/: accounts_display.rs  mod.rs
apps/app-tui/src/pages/creating/: data.rs  instance_creation_section.rs  instance_installing_section.rs  mod.rs
apps/app-tui/src/pages/notifications/: mod.rs  notification_handler.rs  renderer.rs
apps/app-tui/src/pages/viewing/: instances_section.rs  logs_display_body.rs  mod.rs  mods_display_body.rs  options_display_body.rs  search_display_body.rs  view_instance_section.rs
apps/app-tui/src/utils/: mod.rs  profile_files_utils.rs  profile_utils.rs  ui.rs  utils.rs
apps/app-tui/src/utils/extensions/: mod.rs  search_entry_ext.rs  stylize_ext.rs
apps/app-tui/src/widgets/: bordered_block.rs  chip.rs  layouts.rs  mod.rs  search.rs  select.rs  text.rs  text_input.rs
