[package]
name = "app-tui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
theseus = { path = "../../packages/app-lib" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
url = "2.2"
webbrowser = "0.8.13"
dunce = "1.0.3"

futures = "0.3"
uuid = { version = "1.1", features = ["serde", "v4"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.18"
tracing-error = "0.2.0"

ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
crossterm = "0.28.1"

strum = "0.26.3"
dashmap = "6.1.0"
paste = "1.0.15"
memoize = "0.4.2"
chrono = { version = "0.4.19", features = ["serde"] }
open = "5.3.1"
http = "1.1.0"